--- a/sass/_components.sass
+++ b/sass/_components.sass
@@ -22,7 +22,7 @@ header
         right: 0
         bottom: 0
         display: block
-        background: url('/images/bg.jpeg')
+        background: url('../images/bg.jpeg')
         background-size: cover
         transform-origin: center center 0
         transform: translateZ(-1px) scale(2)
